src/test/ui/consts/const-eval/panic-assoc-never-type.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/panic-assoc-never-type.rs:11:21
   |
LL |     const VOID: ! = panic!();
   |                     ^^^^^^^^ the evaluated program panicked at 'explicit panic', $DIR/panic-assoc-never-type.rs:11:21
   |
   = note: this error originates in the macro `$crate::panic::panic_2015` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: erroneous constant used
  --> $DIR/panic-assoc-never-type.rs:16:13
   |
LL |     let _ = PrintName::VOID;
   |             ^^^^^^^^^^^^^^^ referenced constant has errors

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
